--- a/index.html
+++ b/index.html
@@ -1,40 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <header>
         <nav>
-            
+            <ul>
+                <li>Header Logo</li>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
         </nav>
     </header>
 
     <div class="content">
         <div class="apresentation">
-        
+            <div class="presentation-title">
+                This website is awesome
+            </div>
+            <div class="presentation-text">
+                This website has some subtext that goes here under the main
+                title. It's a smaller font and the color is lower contrast
+            </div>
+            <div class="presentation-img">
+                <img />
+            </div>
         </div>
 
         <div class="info">
-
+            <div class="info-title">
+                Some random information
+            </div>
+            <div class="info-content">
+                <div class="card">
+                    <div class="frame"></div>
+                    this is some subtext under an illustration
+                </div>
+                <div class="card">
+                    <div class="frame"></div>
+                    this is some subtext under an illustration
+                </div>
+                <div class="card">
+                    <div class="frame"></div>
+                    this is some subtext under an illustration
+                </div>
+                <div class="card">
+                    <div class="frame"></div>
+                    this is some subtext under an illustration
+                </div>
+            </div>
         </div>
 
         <div class="quote">
-
+            <div class="quote-text">
+                This is an inspiring quote, or a testimonial from a
+                customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who knows? All I know
+                is that it looks nice.
+            </div>
+            <h2>-Thor, TOP<h2>
         </div>
 
-        <div class="sigup">
-
+        <div class="signup">
+            <div class="signup-content">
+                <h1>Call to action! It's time!</h1>
+                <p>Sign up for our product by clicking that button right
+                    over there!
+                </p>
+            </div>
+            <button>Sign up</button>
         </div>
     </div>
 
     <footer>
-
+        Copyright @Copyright The Odin Project 2021
     </footer>
 
 </body>
+
 </html>
