Alignment of the 'presentation' content

--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
     <header>
         <nav>
             <ul>
-                <li>Header Logo</li>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li class="header-logo">Header Logo</li>
+            </ul>
+            <ul class="push-right">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
             </ul>
         </nav>
     </header>
 
     <div class="content">
-        <div class="apresentation">
-            <div class="presentation-title">
-                This website is awesome
-            </div>
-            <div class="presentation-text">
-                This website has some subtext that goes here under the main
-                title. It's a smaller font and the color is lower contrast
+        <div class="presentation">
+            <div class="presentation-content">
+                <div class="presentation-title">
+                    This website is awesome
+                </div>
+                <div class="presentation-text">
+                     This website has some subtext that goes here under the main
+                    title. It's a smaller font and the color is lower contrast
+                </div>
             </div>
             <div class="presentation-img">
                 <img />
