--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <li class="header-logo">Header Logo</li>
             </ul>
             <ul class="push-right">
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
             </ul>
         </nav>
     </header>
@@ -30,9 +30,10 @@
                     This website is awesome
                 </div>
                 <div class="presentation-text">
-                     This website has some subtext that goes here under the main
+                    This website has some subtext that goes here under the main
                     title. It's a smaller font and the color is lower contrast
                 </div>
+                <button> Segnup </button>
             </div>
             <div class="presentation-img">
                 <img />
