Landing Page complete

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     This website has some subtext that goes here under the main
                     title. It's a smaller font and the color is lower contrast
                 </div>
-                <button> Segnup </button>
+                <button> Signup </button>
             </div>
             <div class="presentation-img">
-                <img />
+                <img aria-placeholder="This is a placeholder for a image" />
             </div>
         </div>
 
@@ -47,19 +47,19 @@
             <div class="info-content">
                 <div class="card">
                     <div class="frame"></div>
-                    this is some subtext under an illustration
+                    this is some subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="frame"></div>
-                    this is some subtext under an illustration
+                    this is some subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="frame"></div>
-                    this is some subtext under an illustration
+                    this is some subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="frame"></div>
-                    this is some subtext under an illustration
+                    this is some subtext under an illustration or image
                 </div>
             </div>
         </div>
@@ -71,17 +71,20 @@
                 people will actually read it. Who knows? All I know
                 is that it looks nice.
             </div>
-            <h2>-Thor, TOP<h2>
+            <div class="author"><h2>-Thor, TOP</h2></h2></div>
+
         </div>
 
         <div class="signup">
             <div class="signup-content">
-                <h1>Call to action! It's time!</h1>
-                <p>Sign up for our product by clicking that button right
-                    over there!
-                </p>
+                <div id="signup-text">
+                    <h1>Call to action! It's time!</h1>
+                    <p>Sign up for our product by clicking that button right
+                        over there!
+                    </p>
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
     </div>
 
