Landing Page finished Addedimages in each placeholder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Landing</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                 <button> Signup </button>
             </div>
             <div class="presentation-img">
-                <img aria-placeholder="This is a placeholder for a image" />
+                <img src="https://images.pexels.com/photos/3250638/pexels-photo-3250638.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A eagle flying in a blue sky" width="500" height="600">
             </div>
         </div>
 
@@ -46,19 +46,27 @@
             </div>
             <div class="info-content">
                 <div class="card">
-                    <div class="frame"></div>
+                    <div class="frame">
+                        <img src="https://cdn.pixabay.com/photo/2018/05/03/22/34/lion-3372720_1280.jpg" alt="A Lion between tree branches" width="500" height="600">
+                    </div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card">
-                    <div class="frame"></div>
+                    <div class="frame">
+                        <img src="https://images.pexels.com/photos/35435/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A Lion between tree branches" width="500" height="600">
+                    </div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card">
-                    <div class="frame"></div>
+                    <div class="frame">
+                        <img src="https://cdn.pixabay.com/photo/2020/06/26/17/17/tigre-5343426_1280.jpg" alt="A Lion between tree branches" width="500" height="600">
+                    </div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card">
-                    <div class="frame"></div>
+                    <div class="frame">
+                        <img src="https://images.pexels.com/photos/4666753/pexels-photo-4666753.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A Lion between tree branches" width="500" height="600">
+                    </div>
                     this is some subtext under an illustration or image
                 </div>
             </div>
