commit asked for merge by git

--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
             <div class="info-content">
                 <div class="card">
                     <div class="frame">
-                        <img src="https://cdn.pixabay.com/photo/2018/05/03/22/34/lion-3372720_1280.jpg" alt="A Lion between tree branches">
+                        <img src="https://cdn.pixabay.com/photo/2018/05/03/22/34/lion-3372720_1280.jpg" alt="A Lion between tree branches" width="500" height="600">
                     </div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="frame">
-                        <img src="https://images.pexels.com/photos/35435/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A Lion between tree branches">
+                        <img src="https://images.pexels.com/photos/35435/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A Lion between tree branches" width="150" height="150">
                     </div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="frame">
-                        <img src="https://cdn.pixabay.com/photo/2020/06/26/17/17/tigre-5343426_1280.jpg" alt="A Lion between tree branches">
+                        <img src="https://cdn.pixabay.com/photo/2020/06/26/17/17/tigre-5343426_1280.jpg" alt="A Lion between tree branches" width="150" height="150">
                     </div>
                     this is some subtext under an illustration or image
                 </div>
                 <div class="card">
                     <div class="frame">
-                        <img src="https://images.pexels.com/photos/4666753/pexels-photo-4666753.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A Lion between tree branches">
+                        <img src="https://images.pexels.com/photos/4666753/pexels-photo-4666753.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A Lion between tree branches" width="150" height="150">
                     </div>
                     this is some subtext under an illustration or image
                 </div>
